<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="translateViewModel"
            type="com.everysoft.everytexttranslator.fragment.translate.TranslateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/translate_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.translate.TranslateFragment">

        <TextView
            android:id="@+id/android_translator_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/andcloud_translator"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/swap_language_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/change_the_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/android_translator_text"
            app:srcCompat="@drawable/ic_compare_arrows_black_24dp" />

        <Spinner
            android:id="@+id/from_language_spinner"
            android:layout_width="161dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/swap_language_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/android_translator_text" />

        <Spinner
            android:id="@+id/to_language_spinner"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/swap_language_view"
            app:layout_constraintTop_toBottomOf="@+id/android_translator_text" />

        <EditText
            android:id="@+id/translate_input_text"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/translate_input_hint"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/translate_output_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_language_spinner"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/translate_output_text"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textLongMessage"
            android:hint="@string/output_text_of_translation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/translate_input_text"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/translate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/translate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/translate_output_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>